--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Avenir-Heavy";
   src: url(fonts/Avenir-Heavy.ttf) format("truetype");
@@ -19,7 +20,7 @@
   font-family: "Avenir-Book", sans-serif;
   background: #fff;
   border: 1px solid #e1e7ed;
-  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
+  box-shadow: 0px 1px 8px rgba(61, 78, 97, 0.1);
   border-radius: 4px;
   outline: none;
   font-weight: 300;
@@ -28,7 +29,7 @@
 }
 
 .search:hover {
-  box-shadow: 0 3px 8px rgba(61, 78, 97, 0.2);
+  box-shadow: 0px 3px 8px rgba(61, 78, 97, 0.2);
 }
 
 .search:focus {
@@ -57,19 +58,19 @@
 
 .search-field_small {
   height: 42px;
-}
 
-.search-field_small .small-input {
-  height: 42px;
-  padding: 12px 0 12px 33px;
-  font-size: 14px;
-  line-height: 16px;
-  background: url(images/Search.svg) no-repeat 12px 14px/11px 11px;
+  .small-input {
+    height: 42px;
+    padding: 12px 0 12px 33px;
+    font-size: 14px;
+    line-height: 16px;
+    background: url(images/Search.svg) no-repeat 12px 14px/11px 11px;
+  }
 }
 
 .small-input:focus {
   line-height: 19px;
-  background: url(images/Search.svg) no-repeat 12px 14px/11px 11px, linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
+  background:url(images/Search.svg) no-repeat 12px 14px/11px 11px, linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
 }
 
 .small-input::placeholder {
@@ -83,5 +84,3 @@
   font-weight: 300;
   font-style: normal;
 }
-
-/*# sourceMappingURL=style.css.map */
